erDiagram

    ROLE {
        int id
        string name
    }

    USER {
        int id
        string name
        string email
        int role_id
    }

    TEAM {
        int id
        string name
    }

    PROJECT {
        int id
        int author_id
        string title
        text form_data
        string status
        datetime created_at
        datetime updated_at
    }

    PROJECT_STATUS_HISTORY {
        int id
        int project_id
        string old_status
        string new_status
        int changed_by
        datetime changed_at
    }

    PROJECT_FUNDING {
        int id
        int project_id
        int financier_id
        string funding_status
        datetime assigned_at
        datetime completed_at
    }

    PROJECT_EXECUTION {
        int id
        int project_id
        int project_manager_id
        int team_id
        datetime started_at
        datetime completed_at
    }

    COMMENT {
        int id
        int project_id
        int author_id
        text content
        datetime created_at
    }

    %% ROLES
    ROLE ||--o{ USER : has

    %% PROJECT AUTHOR
    USER ||--o{ PROJECT : creates

    %% COMMENTS
    USER ||--o{ COMMENT : writes
    PROJECT ||--o{ COMMENT : has

    %% COLLABORATORS
    USER }o--o{ PROJECT : proposal_collaborators

    %% STATUS HISTORY
    PROJECT ||--o{ PROJECT_STATUS_HISTORY : changes
    USER ||--o{ PROJECT_STATUS_HISTORY : performs

    %% FUNDING
    PROJECT ||--o| PROJECT_FUNDING : funding_process
    USER ||--o{ PROJECT_FUNDING : finances

    %% EXECUTION
    PROJECT ||--o| PROJECT_EXECUTION : execution_process
    USER ||--o{ PROJECT_EXECUTION : manages
    TEAM ||--o{ PROJECT_EXECUTION : realizes